<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tvNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_default_name"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvEmailUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_default_email"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvRolUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_default_role"
        android:textSize="14sp" />
</LinearLayout>
